# AgriScope

./: .env.example  .gitignore  AGENTS.md  CODEBUDDY.md  NOTICE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/scripts/: fetch_osm_farmland_snapshot.py  import_administrative_boundaries.py  import_osm_farmland.py  import_public_landsat_pansharpening.py  import_public_sentinel_imagery.py  init_db.sql
backend/tests/: test_acceptance_report.py  test_api_envelope.py  test_boundary_delivery_services.py  test_change_candidate_discovery.py  test_change_comparison.py  test_change_detection.py  test_dataset_asset_batch_import.py  test_dataset_asset_verification.py  test_disaster_import.py  test_disaster_report.py  test_field_import.py  test_field_mobile_capture.py  test_field_resolution_workflow.py  test_field_verification_artifacts.py  test_growth_monitoring.py  test_imagery_asset.py  test_imagery_fusion.py  test_imagery_history.py  test_imagery_mosaic.py  test_imagery_processing_engine.py  test_imagery_quicklook.py  test_imagery_registration.py  test_import_public_landsat_pansharpening.py  test_import_public_sentinel_imagery.py  test_monitoring_network.py  test_offline_archive.py  test_osm_farmland_import.py  test_plot_attribute_field.py  test_plot_attribute_workbook.py  test_plot_service.py  test_production.py  test_public_imagery.py  test_rule_config.py  test_schemas.py  test_service_sharing.py  test_statistics.py  test_statistics_report.py  test_supervision.py  test_thematic_map.py  test_uav.py  (+2 more)
(+472 files in other folders)
