[tool.poetry]
name = "remote-sensing-monitor-backend"
version = "0.1.0"
description = "遥感监测内业处理与成果审核平台后端服务"
authors = ["遥感监测平台项目组"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
sqlalchemy = { version = "^2.0.36", extras = ["asyncio"] }
geoalchemy2 = "^0.16.0"
asyncpg = "^0.30.0"
pydantic-settings = "^2.6.0"
uvicorn = { version = "^0.32.0", extras = ["standard"] }
rasterio = "^1.4.3"
python-multipart = "^0.0.20"
openpyxl = "^3.1.5"
pillow = "^10.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"
ruff = "^0.7.0"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
